bdr.BDR.scala.error
Erreur de compilation :
BDR:7: error: not found: value Z
if (litMessage() == Z){
                    ^